This is for new commit version 10

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <head>
-	<title>Changes before stash comment</title>
+	<title>
+	This is for Branch stash example
+	Changes before stash comment
+	Adding changes for Additional Examples in GitHub
+	</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
